--- a/src/playground/playground.ipynb
+++ b/src/playground/playground.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import pandas\n",
     "import cv2 as cv\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib widget"
    ]
   },
   {
