--- a/src/playground/playground.ipynb
+++ b/src/playground/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,16 @@
     "a = np.array([1,2,3])\n",
     "b = a*5\n",
     "fig, ax = plt.subplots()\n",
+    "plt.plot(1,2,3)\n",
     "ax.plot(a,b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
